# gpt-task-runner

./: .gitignore  .releaserc.json  .versionrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES_TO_CREATE.md  LICENSE  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_ROADMAP.md  README.md  SECURITY.md  STRUCTURE.md  UnifiedLibranDictionaryv1.7.0.json  audit-dictionary.js  branch_protection.json  build-dictionary.js  commitlint.config.js  docker-compose.yml  dry-run-results.jsonl  env.example  eslint.config.mjs  jest.config.js  manage-exclusions.js  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  sample-phrase-book.json  tailwind.config.js  test-results.dry-run.jsonl  test-results.jsonl  tsconfig.json  tsconfig.test.json  tsconfig.worker.json  vitest.config.e2e.ts  vitest.config.integration.ts  (+2 more)
tools/dict_importer/: CLI_README.md  JSON_IMPORT_README.md  README.md  coverage.xml  debug_libran_parser.py  pyproject.toml
tools/dict_importer/dict_importer/: __init__.py  build_dicts.py  cli.py  json_importer.py  libran_json_importer.py  libran_json_importer_fixed.py  libran_parser.py  logging_config.py  normalize.py  parse_tables.py  pdf_extract.py  schema.py  validation.py
tools/dict_importer/test_output/: ALL_ROWS.csv  EXCLUDED.txt  REPORT.md  VARIANTS.csv  ancient.json  modern.json
tools/dict_importer/tests/: test_cli.py  test_enhanced_conflict_resolution.py  test_enhanced_conflict_resolution_simple.py  test_enhanced_integration.py  test_enhanced_normalize.py  test_enhanced_parse_tables.py  test_integration.py  test_json_importer.py  test_libran_json_importer.py  test_normalize.py  test_parse_tables.py  test_validation.py
tools/dict_importer/tests/fixtures/: hyphen_test_cases.txt  (+1 more)
(+358 files in other folders)
